--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -17,3 +17,19 @@ title: 考研复习追踪
   - 词 U2
 - 数学
   - 习题：函数单调性、奇偶性、周期性，复合函数
+
+## 9.10
+
+- 英语
+  - 词 U3
+- 数学
+  - 视频课：函数与数列的极限
+- 专业
+  - 视频课：408导学
+
+## 9.12
+
+- 英语
+  - 词 U4
+- 数学
+  - 线性代数：矩阵的秩
