--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -51,3 +51,21 @@ title: 考研复习追踪
   - 视频课：极限
 - 专业
   - 数据结构第四、五章：串与数
+
+## 9.15
+
+- 英语
+  - 词 U6
+- 数学
+  - 视频课：洛必达
+
+## 9.16
+
+- 英语
+  - 整理词汇笔记 U2-U4
+- 数学
+  - 视频课：洛必达 (2)
+- 专业
+  - 视频课：图论
+- 政治
+  - 1000 题第一部分第一章
