--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -69,3 +69,16 @@ title: 考研复习追踪
   - 视频课：图论
 - 政治
   - 1000 题第一部分第一章
+
+## 9.17
+
+解决电脑问题休一天
+
+## 9.18
+
+- 英语
+  - 词 U7
+- 数学
+  - 函数与极限笔记整理
+- 专业
+  - 视频课：操作系统
