--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -82,3 +82,23 @@ title: 考研复习追踪
   - 函数与极限笔记整理
 - 专业
   - 视频课：操作系统
+
+## 9.19
+
+- 英语
+  - 词 U8
+- 数学
+  - 视频课
+- 专业
+  - 操作系统 (2)
+- 政治
+  - 1000 题第一部分第二章
+
+## 9.20
+
+- 数学
+  - 笔记整理
+- 专业
+  - 操作系统 1.1 1.2 习题
+- 政治
+  - 1000 题第一部分第三章
