--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -102,3 +102,14 @@ title: 考研复习追踪
   - 操作系统 1.1 1.2 习题
 - 政治
   - 1000 题第一部分第三章
+
+## 9.21
+
+中秋休一天
+
+## 9.22
+
+- 政治
+  - 1000 题第一部分第四、五章
+- 专业
+  - 操作系统 1.3 1.4
