--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -113,3 +113,12 @@ title: 考研复习追踪
   - 1000 题第一部分第四、五章
 - 专业
   - 操作系统 1.3 1.4
+
+## 9.23
+
+- 数学
+  - 第一章公式与结论
+- 专业
+  - 操作系统 2.1 习题
+- 政治
+  - 1000 题第一部分第六、七、八章
