--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -122,3 +122,14 @@ title: 考研复习追踪
   - 操作系统 2.1 习题
 - 政治
   - 1000 题第一部分第六、七、八章
+
+## 9.26
+
+- 数学
+  - 第一章经典例题选讲
+- 政治
+  - 1000 题第一部分多选第一、二章
+- 专业
+  - 操作系统 2.1 习题解析
+- 英语
+  - 词 U9
