--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -133,3 +133,14 @@ title: 考研复习追踪
   - 操作系统 2.1 习题解析
 - 英语
   - 词 U9
+
+## 9.27
+
+- 数学
+  - 习题 2.1
+- 政治
+  - 第一、二章知识点复习
+- 专业
+  - 操作系统 2.1 巩固
+- 英语
+  - 词 U10
