--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -144,3 +144,14 @@ title: 考研复习追踪
   - 操作系统 2.1 巩固
 - 英语
   - 词 U10
+
+## 9.28
+
+- 数学
+  - 习题 2.2
+- 政治
+  - 1000 题第一部分多选第三章
+- 专业
+  - 操作系统 2.2
+- 英语
+  - 词 U11
