--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -170,3 +170,14 @@ title: 考研复习追踪
   - 1000 题第一部分多选第四章
 - 专业
   - 操作系统 2.3
+
+
+## 10.5
+
+- 数学
+  - 习题 2-3
+  - 习题 2-4
+- 英语
+  - 词 U13
+
+> 接下来重心向数学倾斜。
