--- a/docs/考研复习追踪.md
+++ b/docs/考研复习追踪.md
@@ -171,7 +171,6 @@ title: 考研复习追踪
 - 专业
   - 操作系统 2.3
 
-
 ## 10.5
 
 - 数学
@@ -194,7 +193,14 @@ title: 考研复习追踪
 ## 10.8
 
 - 数学
- - 习题 3-1
- - 习题 3-2
+  - 习题 3-1
+  - 习题 3-2
 - 专业
   - 操作系统 2-1 2-2 进程管理
+
+## 10.9
+
+- 数学
+  - 习题 3-3
+- 专业
+  - 操作系统 2-2 习题
